Fixing alignment issues with the FilesTab progress bar
Two issues:
- Height offset for the white overlayed text was slightly off, causing the background darker text to be slightly visible when replaced with the foreground white text
- Progress offset caused the white foreground text to be 10 pixels ahead in progress, meaning the replacement text wasn't aligned with the background progress bar

--- a/deluge/ui/web/css/deluge.css
+++ b/deluge/ui/web/css/deluge.css
@@ -283,7 +283,7 @@ dl.singleline dd {
 }
 
 .x-progress-renderered .x-progress-bar .x-progress-text {
-    margin-top: -1px;
+    margin-top: -2px;
     height: 18px;
 }
 
